--- a/app/src/main/res/drawable/ic_more.xml
+++ b/app/src/main/res/drawable/ic_more.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18dp"
-    android:height="18dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="@dimen/default_icon_side_length"
+    android:height="@dimen/default_icon_side_length"
+    android:viewportWidth="@dimen/default_icon_viewport_side_length"
+    android:viewportHeight="@dimen/default_icon_viewport_side_length">
   <path
       android:pathData="M6,10c-1.1,0 -2,0.9 -2,2s0.9,2 2,2 2,-0.9 2,-2 -0.9,-2 -2,-2zM18,10c-1.1,0 -2,0.9 -2,2s0.9,2 2,2 2,-0.9 2,-2 -0.9,-2 -2,-2zM12,10c-1.1,0 -2,0.9 -2,2s0.9,2 2,2 2,-0.9 2,-2 -0.9,-2 -2,-2z"
-      android:fillColor="#000000"/>
+      android:fillColor="@color/black"/>
 </vector>
