--- a/app/src/main/res/layout/bottom_sheet_share.xml
+++ b/app/src/main/res/layout/bottom_sheet_share.xml
@@ -4,12 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="8dp">
+    android:paddingBottom="@dimen/default_padding">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_share_via_email"
         style="@style/BottomSheetItem"
-        android:drawableStart="@drawable/ic_email_24px"
+        android:drawableStart="@drawable/ic_send_email"
         android:text="@string/share_email"
         android:background="?android:attr/selectableItemBackground"
         android:focusable="true"
@@ -22,7 +22,7 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_options"
         style="@style/BottomSheetItem"
-        android:drawableStart="@drawable/ic_more_horiz_black_18dp"
+        android:drawableStart="@drawable/ic_more"
         android:text="@string/options"
         android:background="?android:attr/selectableItemBackground"
         android:focusable="true"
