--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/video_button_text"
-        android:drawableEnd="@drawable/ic_open_in_new_24px"
+        android:drawableEnd="@drawable/ic_open_externally"
         app:layout_constraintBottom_toTopOf="@id/bottom_sheet_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="@dimen/default_constraint_horizontal_bias"
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/share_button"
-        android:drawableEnd="@drawable/ic_share_24px"
+        android:drawableEnd="@drawable/ic_share"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="@dimen/default_constraint_horizontal_bias"
