--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin"
-        android:drawableEnd="@drawable/search_icon"
+        android:drawableEnd="@drawable/ic_search"
         android:ems="17"
         android:hint="@string/hint_text"
         android:inputType="textPersonName"
@@ -32,7 +32,7 @@
         app:layout_constraintHorizontal_bias="@dimen/default_constraint_horizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_bar"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="@dimen/default_constraint_vertical_bias"
         tools:listitem="@layout/card_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
