58, EXC-49: Implement link sharing on system share tray

--- a/app/src/main/res/layout/bottom_sheet_share.xml
+++ b/app/src/main/res/layout/bottom_sheet_share.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_options"
+        android:id="@+id/text_share_externally"
         style="@style/BottomSheetItem"
         android:drawableStart="@drawable/ic_more"
         android:text="@string/options"
