58, EXC-49 (fix): Edit .xml IDs, edit link sharing text template

--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/card_title"
+            android:id="@+id/cardTitle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@string/recyclerview_text" />
+            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 
