--- a/app/src/main/res/layout/bottom_sheet_share.xml
+++ b/app/src/main/res/layout/bottom_sheet_share.xml
@@ -4,13 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/default_padding">
+    android:paddingBottom="@dimen/defaultPadding">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_share_via_email"
+        android:id="@+id/textShareViaEmail"
         style="@style/BottomSheetItem"
         android:drawableStart="@drawable/ic_send_email"
-        android:text="@string/share_email"
+        android:text="@string/shareEmail"
         android:background="?android:attr/selectableItemBackground"
         android:focusable="true"
         android:clickable="true"
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_share_externally"
+        android:id="@+id/textShareExternally"
         style="@style/BottomSheetItem"
         android:drawableStart="@drawable/ic_more"
         android:text="@string/options"
@@ -30,6 +30,6 @@
         android:gravity="center|start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_share_via_email" />
+        app:layout_constraintTop_toBottomOf="@+id/textShareViaEmail" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
