--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -6,43 +6,43 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/movieTitleTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="false"
-        android:text="@string/default_message"
+        android:text="@string/defaultMessage"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="@dimen/default_constraint_width_percentage" />
+        app:layout_constraintWidth_percent="@dimen/defaultConstraintWidthPercentage" />
 
     <Button
-        android:id="@+id/video_button"
+        android:id="@+id/videoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/video_button_text"
+        android:text="@string/videoButtonNext"
         android:drawableEnd="@drawable/ic_open_externally"
-        app:layout_constraintBottom_toTopOf="@id/bottom_sheet_button"
+        app:layout_constraintBottom_toTopOf="@id/bottomSheetButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="@dimen/default_constraint_horizontal_bias"
+        app:layout_constraintHorizontal_bias="@dimen/defaultConstraintHorizontalBias"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintWidth_percent="@dimen/default_constraint_width_percentage" />
+        app:layout_constraintTop_toBottomOf="@+id/movieTitleTextview"
+        app:layout_constraintWidth_percent="@dimen/defaultConstraintWidthPercentage" />
 
     <Button
-        android:id="@+id/bottom_sheet_button"
+        android:id="@+id/bottomSheetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/share_button"
+        android:text="@string/shareButton"
         android:drawableEnd="@drawable/ic_share"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="@dimen/default_constraint_horizontal_bias"
+        app:layout_constraintHorizontal_bias="@dimen/defaultConstraintHorizontalBias"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/video_button"
-        app:layout_constraintWidth_percent="@dimen/default_constraint_width_percentage" />
+        app:layout_constraintTop_toBottomOf="@+id/videoButton"
+        app:layout_constraintWidth_percent="@dimen/defaultConstraintWidthPercentage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
