--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,13 +7,13 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/search_bar"
+        android:id="@+id/movieSearchBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/default_margin"
+        android:layout_marginTop="@dimen/defaultMargin"
         android:drawableEnd="@drawable/ic_search"
         android:ems="17"
-        android:hint="@string/hint_text"
+        android:hint="@string/hintText"
         android:inputType="textPersonName"
         android:singleLine="false"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,17 +22,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/movieRecyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/default_margin"
+        android:layout_marginTop="@dimen/defaultMargin"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="@dimen/default_constraint_horizontal_bias"
+        app:layout_constraintHorizontal_bias="@dimen/defaultConstraintHorizontalBias"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_bar"
-        app:layout_constraintVertical_bias="@dimen/default_constraint_vertical_bias"
+        app:layout_constraintTop_toBottomOf="@+id/movieSearchBar"
+        app:layout_constraintVertical_bias="@dimen/defaultConstraintVerticalBias"
         tools:listitem="@layout/card_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
