--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -9,8 +9,7 @@
 
         <TextView
             android:id="@+id/cardTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            style="@style/RecyclerViewText" />
 
     </RelativeLayout>
 
