--- a/app/src/main/res/layout/bottom_sheet_share.xml
+++ b/app/src/main/res/layout/bottom_sheet_share.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/defaultPadding">
@@ -9,12 +10,12 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textShareViaEmail"
         style="@style/BottomSheetItem"
-        android:drawableStart="@drawable/ic_send_email"
-        android:text="@string/shareEmail"
         android:background="?android:attr/selectableItemBackground"
-        android:focusable="true"
         android:clickable="true"
+        android:drawableStart="@drawable/ic_send_email"
+        android:focusable="true"
         android:gravity="center|start"
+        android:text="@string/shareEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,5 +32,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textShareViaEmail" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/noEmailAppText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/noEmailAppString"
+        android:textSize="@dimen/bottomSheetEmailErrorTextSize"
+        android:textAlignment="center"
+        android:textColor="@color/red"
+        app:layout_constraintBottom_toBottomOf="@+id/textShareViaEmail"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
