17, EXC-10 E1: Apply card shadow to recycler view items

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,7 @@
     <dimen name="defaultIconViewportSideLength">24</dimen>
     <dimen name="defaultTextSize">20sp</dimen>
     <dimen name="bottomSheetEmailErrorTextSize">10sp</dimen>
+    <dimen name="recyclerViewCardMarginBottom">5dp</dimen>
+    <dimen name="recyclerViewCardElevation">2dp</dimen>
+    <dimen name="recyclerViewCardCornerRadius">4dp</dimen>
 </resources>
