--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:focusable="true"
+    android:clickable="true"
+    android:gravity="center|start"
+    android:layout_marginBottom="@dimen/recyclerViewCardMarginBottom"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="@dimen/recyclerViewCardElevation">
 
     <RelativeLayout
         android:layout_width="match_parent"
