--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -4,11 +4,9 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:focusable="true"
-    android:clickable="true"
     android:gravity="center|start"
     android:layout_marginBottom="@dimen/recyclerViewCardMarginBottom"
-    card_view:cardCornerRadius="4dp"
+    card_view:cardCornerRadius="@dimen/recyclerViewCardCornerRadius"
     card_view:cardElevation="@dimen/recyclerViewCardElevation">
 
     <RelativeLayout
