20, EXC-12 E1: Add font family to the project

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,6 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/cutive_mono</item>
         <item>@font/lora</item>
+        <item>@font/nunito</item>
     </array>
 </resources>
