--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
     </style>
 
     <style name="RecyclerViewText">
-        <item name="android:textSize">@dimen/defaultTextSize</item>
+        <item name="android:textSize">@dimen/recyclerViewTextSize</item>
         <item name="android:drawablePadding">@dimen/defaultDrawablePadding</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -20,7 +20,7 @@
     </style>
 
     <style name="BottomSheetItem">
-        <item name="android:textSize">@dimen/defaultTextSize</item>
+        <item name="android:textSize">@dimen/recyclerViewTextSize</item>
         <item name="android:drawablePadding">@dimen/defaultDrawablePadding</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
