--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -7,14 +7,7 @@
 
     <TextView
         android:id="@+id/movieTitleTextview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="false"
-        android:text="@string/defaultMessage"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textSize="@dimen/movieTitleTextSize"
-        android:fontFamily="@font/nunito"
+        style="@style/MovieDetailsTitleText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
