--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,17 @@
         <item name="fontFamily">@font/nunito</item>
     </style>
 
+    <style name="MovieDetailsTitleText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:clickable">false</item>
+        <item name="android:text">@string/defaultMessage</item>
+        <item name="android:textAlignment">center</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">@dimen/movieTitleTextSize</item>
+        <item name="fontFamily">@font/nunito</item>
+    </style>
+
     <style name="BottomSheetItem">
         <item name="android:textSize">@dimen/recyclerViewTextSize</item>
         <item name="android:drawablePadding">@dimen/defaultDrawablePadding</item>
