--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,8 +22,8 @@
     <style name="MovieDetailsTitleText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:visibility">invisible</item>
         <item name="android:clickable">false</item>
-        <item name="android:text">@string/defaultMessage</item>
         <item name="android:textAlignment">center</item>
         <item name="textAllCaps">false</item>
         <item name="android:textSize">@dimen/movieTitleTextSize</item>
