--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,7 +36,11 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">@dimen/defaultPadding</item>
-        <item name="fontFamily">@font/lora</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:gravity">center|start</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="fontFamily">@font/nunito</item>
     </style>
 
 </resources>
